# AdvMath_MidtermProject

./: README.md  main.py  pyproject.toml  sugar_consumption_predicition.ipynb  titanic_survival_classification.ipynb
hyperband_dir/hyperparam_compare/: oracle.json
hyperband_dir/hyperparam_compare/trial_0000/: checkpoint.weights.h5  trial.json
hyperband_dir/hyperparam_compare/trial_0001/: checkpoint.weights.h5  trial.json
hyperband_dir/hyperparam_compare/trial_0002/: checkpoint.weights.h5  trial.json
hyperband_dir/hyperparam_compare/trial_0003/: checkpoint.weights.h5  trial.json
hyperband_dir/hyperparam_compare/trial_0004/: checkpoint.weights.h5  trial.json
hyperband_dir/hyperparam_compare/trial_0005/: checkpoint.weights.h5  trial.json
hyperband_dir/hyperparam_compare/trial_0006/: checkpoint.weights.h5  trial.json
hyperband_dir/hyperparam_compare/trial_0007/: checkpoint.weights.h5  trial.json
hyperband_dir/hyperparam_compare/trial_0008/: checkpoint.weights.h5  trial.json
hyperband_dir/hyperparam_compare/trial_0009/: checkpoint.weights.h5  trial.json
hyperband_dir/hyperparam_compare/trial_0010/: checkpoint.weights.h5  trial.json
hyperband_dir/hyperparam_compare/trial_0011/: checkpoint.weights.h5  trial.json
hyperband_dir/hyperparam_compare/trial_0012/: checkpoint.weights.h5  trial.json
hyperband_dir/hyperparam_compare/trial_0013/: checkpoint.weights.h5  trial.json
hyperband_dir/hyperparam_compare/trial_0014/: checkpoint.weights.h5  trial.json
hyperband_dir/sugar_consumption/: oracle.json
(+314 files in other folders)
